src/CardContent/CardContent.module.css
.wrapper {
  display: flex;
  align-items: center;
}

/* Alignment variants */
.start {
  justify-content: flex-start;
}
.center {
  justify-content: center;
}
.end {
  justify-content: flex-end;
}
.between {
  justify-content: space-between;
}

/* Position variants */
.top {
  background: var(--card-top-bg);
  margin: calc(var(--card-padding) * -1);
  padding: var(--card-padding);
  margin-bottom: 1em;
}
.middle {
  flex-grow: 1;
  flex-direction: column;
}
.bottom {
  margin-top: 1em;
}

/* Fill variant */
.fill {
  flex: 1;
}

